force-app/main/default/objects/Process_Path_Task_Detail__c/Process_Path_Task_Detail__c.object-meta.xml
<CustomObject>
    <label>Process Path Task Detail</label>
    <nameField>
        <label>Process Path Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Path Task Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>