force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <label>Action URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>