force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Business_Step_No__c.field-meta.xml
<CustomField>
    <fullName>Business_Step_No__c</fullName>
    <label>Business Step No</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>