force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Child_Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Task_Category__c</fullName>
    <defaultValue>&apos;Others&apos;</defaultValue>
    <label>Task Child Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Child_Category</valueSetName>
    </valueSet>
</CustomField>