force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Communication_Template__c.field-meta.xml
<CustomField>
    <fullName>Communication_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Template</label>
    <referenceTo>Communication_Template__c</referenceTo>
    <relationshipLabel>Process Path Task Details</relationshipLabel>
    <relationshipName>Process_Path_Task_Details</relationshipName>
    <type>Lookup</type>
</CustomField>