force-app/main/default/objects/Process_Path_Task_Detail__c/fields/ED_Process_Path_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>ED_Process_Path_Task_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contain the value of the Process Path Task Detail post the closer of which this Process Path Task Detail will be created</description>
    <label>Execution Dependent On PPathTD</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Path Task Details</relationshipLabel>
    <relationshipName>Process_Path_Details</relationshipName>
    <type>Lookup</type>
</CustomField>