force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Execution_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Execution_Serial_No__c</fullName>
    <label>Execution Serial No</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>