force-app/main/default/objects/Process_Path_Task_Detail__c/fields/isMergeable__c.field-meta.xml
<CustomField>
    <fullName>isMergeable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>can the current task can be merged into the existing open task of any path</description>
    <label>isMergeable</label>
    <type>Checkbox</type>
</CustomField>