force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Manual_API_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>Manual_API_Call_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual API Call Out</label>
    <type>Checkbox</type>
</CustomField>