force-app/main/default/objects/Process_Path_Task_Detail__c/fields/No_Of_Attempts_Allowed__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Attempts_Allowed__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <label>No Of Attempts Allowed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>