force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Parent_Task_Closure_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Closure_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag to be marked true if the parent task&apos;s status is considered to be closed only if the child task status is closed</description>
    <label>Parent Task Closure Dependent</label>
    <type>Checkbox</type>
</CustomField>