force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Path_No__c.field-meta.xml
<CustomField>
    <fullName>Path_No__c</fullName>
    <label>Path No</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
                <default>true</default>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
            <value>
                <fullName>P8</fullName>
            </value>
            <value>
                <fullName>P9</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
            <value>
                <fullName>P11</fullName>
            </value>
            <value>
                <fullName>P12</fullName>
            </value>
            <value>
                <fullName>P13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>