force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Process_Path__c.field-meta.xml
<CustomField>
    <fullName>Process_Path__c</fullName>
    <label>Process Path</label>
    <referenceTo>Process_Path__c</referenceTo>
    <relationshipLabel>Process Path Task Details</relationshipLabel>
    <relationshipName>Process_Path_Task_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>