force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Process_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>Process_Task_Detail__c</fullName>
    <label>Process Task Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Process_Task_Detail__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Process_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Path Task Details</relationshipLabel>
    <relationshipName>Process_Path_Task_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>