force-app/main/default/objects/Process_Path_Task_Detail__c/fields/SD_Process_Path_Task_Detail__c.field-meta.xml
<CustomField>
    <fullName>SD_Process_Path_Task_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will contain the value of the Process Path Task Detail in which the Document was created and the same set of document has to be shared for viewing  for this Process Path Task Detail</description>
    <label>Share Document of PPathTD</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Path Task Details (View Document of PPathTD)</relationshipLabel>
    <relationshipName>Process_Path_Task_Details</relationshipName>
    <type>Lookup</type>
</CustomField>