force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Share_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Share_Document_Status__c</fullName>
    <label>Share Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Handler_Status</valueSetName>
    </valueSet>
</CustomField>