force-app/main/default/objects/Process_Path_Task_Detail__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SLA to be added to the current date time when the task is open set the Due date</description>
    <label>SLA</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>