force-app/main/default/objects/Process_Path_Task_Detail__c/fields/Task_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Name__c</fullName>
    <label>Task Owner Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>