force-app/main/default/objects/Process_Path_Task_Detail__c/fields/To_Be_Merged_With_PPTD__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Merged_With_PPTD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Be Merged With PPTD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Path Task Details (To Be Merged With PPTD)</relationshipLabel>
    <relationshipName>Process_Path_Task_Details_Merge</relationshipName>
    <type>Lookup</type>
</CustomField>