force-app/main/default/objects/Process_Path_Task_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Path__c</columns>
    <columns>Execution_Serial_No__c</columns>
    <columns>Process_Task_Detail__c</columns>
    <columns>ED_Process_Path_Task_Detail__c</columns>
    <columns>Subject__c</columns>
    <columns>Action_URL__c</columns>
    <columns>Task_Owner_Name__c</columns>
    <columns>Task_Record_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>